# Ruff configuration
[tool.ruff]
line-length = 79
target-version = "py310"
show-fixes = true

# Linting rules
[tool.ruff.lint]
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "B",   # Flake8-bugbear
    "D",   # Docstring
    "N",   # PEP 8 naming
    "UP",  # Pyupgrade
    "C",   # McCabe complexity
    "W",   # Pycodestyle warnings
    "S",   # Security
    "BLE", # Exception handling
    "FBT", # Boolean type checks
    "A",   # Variable naming rules
    "COM", # Comma placement
    "T20", # Restrict print statements
    "RUF", # Ruff-specific rules
]
ignore = ["D203", "D213"]

# Formatting preferences
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
line-ending = "lf"

# Pydocstyle convention
[tool.ruff.pydocstyle]
convention = "google"

# PEP 8 naming conventions
[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
ignore-names = ["setUp", "tearDown", "setUpClass", "tearDownClass"]

# isort settings
[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = []
known-third-party = ["websockets"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# McCabe complexity limit
[tool.ruff.mccabe]
max-complexity = 10

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = ["^venv/*"]

# Poetry dependencies
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
line-bot-sdk = "^3.7.0"
python-dotenv = "^1.0.0"
